@@ -6,6 +6,7 @@ AC_PROG_ARCHIVE
 AC_PROG_ARCHIVE_ADD
 AC_PROG_RANLIB
 AC_PROG_INSTALL
+AC_HAVE_HEADERS(unistd.h)
 AppendRule([all:: libkdb5.a])
 KRB_INCLUDE
 WITH_KRB5ROOT
