@@ -1,3 +1,10 @@
+Fri Oct 14 00:57:33 1994  Theodore Y. Ts'o  (tytso@dcl)
+
+	* configure.in: Add test for unistd.h
+
+	* lock_file.c: Use POSIX_FILE_LOCKS if _POSIX_VERSION is defined
+		in unistd.h
+
 Tue Oct  4 15:08:03 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* kdb_dbm.c (decode_princ_contents): Add backwards compatibility
